cmake_minimum_required(VERSION 3.3)
project(bankers_algorithm)

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
set(SOURCE_FILES bankers_algorithm.c)

add_executable(bankers_algorithim ${SOURCE_FILES})

#
# read docs here : https://www.jetbrains.com/help/clion/2016.3/quick-start-guide.html
# Docs
#[Quick Start Guide](https://www.jetbrains.com/help/clion/2016.3/quick-start-guide.html)
#[Creating and Editing Run/Debug Configurations](https://www.jetbrains.com/help/clion/2016.3/creating-and-editing-run-debug-configurations.html)
#[CMakeLists File](https://www.jetbrains.com/help/clion/2016.3/cmakelists-file.html)
#[CMake](https://www.jetbrains.com/help/clion/2016.3/cmake.html)
#[Quick CMake Tutorial](https://www.jetbrains.com/help/clion/2016.3/quick-cmake-tutorial.html)
#[Changing Configuration Types](https://www.jetbrains.com/help/clion/2016.3/changing-configuration-types.html)
#
#

